feat(admin): add delete user feature
Also add some metrics and improve admin role detection.
